trying to add bad model augs to aprime_by_ppm

--- a/analysis.Rmd
+++ b/analysis.Rmd
@@ -343,11 +343,15 @@ aprime_by_ppm <- raw %>%
          data = pmap(list(data, resid_aprime_diff, resid_ppm_diff),
                      function(a, b, c) {bind_cols(a, b, c)}),
          model = map(data, ~lm(aprime_diff ~ aprime_off_c + ppm_diff, data = .x)),
-         resid_augs = map(data, ~lm(aprime_diff_resid ~ ppm_diff_resid, data = .x) %>%
+         augs = map(model, ~.x %>%
                             broom::augment() %>%
                             select(aprime_diff_fit = .fitted)),
+         resid_augs = map(data, ~lm(aprime_diff_resid ~ ppm_diff_resid, data = .x) %>%
+                            broom::augment() %>%
+                            select(aprime_diff_fit_resid = .fitted)),
+         data = map2(data, augs, ~bind_cols(.x, .y)),
          data = map2(data, resid_augs, ~bind_cols(.x, .y))) %>%
-  select(-starts_with("resid"))
+  select(-starts_with("resid"), -augs)
 ```
 
 ```{r}
@@ -686,6 +690,8 @@ aprime_by_ppm_boot <- boots_by_subj %>%
          model = map(data, ~lm(aprime_diff ~ aprime_off_c + ppm_diff, data = .x)),
          model_resid = map(data, ~lm(aprime_diff_resid ~ ppm_diff_resid, data = .x)),
          coefs = map(data, ~lm(aprime_diff ~ aprime_off_c + ppm_diff, data = .x) %>%
+                       broom::tidy()),
+         coefs_unadj = map(data, ~lm(aprime_diff ~ ppm_diff, data = .x) %>%
                        broom::tidy())) %>%
   left_join(aprime_by_ppm %>%
               select(exptCond, probe, data_raw = data, coefs_raw = model) %>%
