--- a/analysis.Rmd
+++ b/analysis.Rmd
@@ -819,7 +819,7 @@ As of 02/05/2020: Keep the original "onoff" model, and add one where the two-way
 03/18/2020: Fit the dummy model separately for each `exptCond * probe` condition
 
 ```{r, eval = FALSE}
-models2 <- tibble(has_probe = c(rep(list(c("art", "room")), 3), as.list(rep(c("art", "room"), times = 3))),
+models <- tibble(has_probe = c(rep(list(c("art", "room")), 3), as.list(rep(c("art", "room"), times = 3))),
                   has_exptCond = c(rep(list(0:1), 3 + 2), as.list(rep(0:1, each = 2))),
                   has_valid = c(list(1L, 0:1),
                                as.list(rep(1L, 1 + 2 + 4))),
@@ -865,23 +865,59 @@ models2 <- tibble(has_probe = c(rep(list(c("art", "room")), 3), as.list(rep(c("a
                         probe = recode(probe,
                                        art = -0.5,
                                        room = 0.5),
-                        on_smoking = on_smoking - 0.5)),
+                        on_smoking = on_smoking - 0.5),
+                    log_rt = log(rt * 1000)),
          txt_formula = map_chr(terms, ~paste(.x, collapse = " + ")),
          txt_formula = case_when(
            name == "full" ~ paste0("(", txt_formula, ")^3"),
            name == "manip_check" ~ paste0(txt_formula, " + corResp:valid"),
            startsWith(name, "dummy") | startsWith(name, "sep") ~ paste0("(", txt_formula, ")^2")),
-         txt_formula = paste("resp ~", txt_formula, "+", ranefs))
+         txt_formula = paste("resp ~", txt_formula, "+", ranefs),
+         # all the RT model setting stuff is here now
+         terms_rt = map(terms, ~c("resp", .x)),
+         txt_formula_rt = map_chr(terms_rt, ~paste(.x, collapse = " + ")),
+         ranefs_rt = case_when(
+           name == "full" ~ paste0("(1 + (", txt_formula_rt,")^3 | subj_num)"),
+           name == "manip_check" ~ paste0("(1 + ", txt_formula_rt," | subj_num)"),
+           startsWith(name, "dummy") | startsWith(name, "sep") ~ paste0("(1 + (", txt_formula_rt,")^2 | subj_num)"),
+           TRUE ~ NA_character_
+         ),
+         txt_formula_rt = map_chr(terms_rt, ~paste(.x, collapse = " + ")),
+         txt_formula_rt = case_when(
+           name == "full" ~ paste0("(", txt_formula_rt, ")^3"),
+           name == "manip_check" ~ paste0(txt_formula_rt, " + corResp:valid + resp:valid"),
+           startsWith(name, "dummy") | startsWith(name, "sep") ~ paste0("(", txt_formula_rt, ")^3")),
+         txt_formula_rt = paste("log_rt ~", txt_formula_rt, "+", ranefs_rt))
 
-models2 %<>%
-         mutate(model = map2(txt_formula, data, ~rstanarm::stan_glmer(as.formula(.x),
-                                                               family = binomial(link = "logit"),
-                                                               data = .y,
-                                                               prior = rstanarm::cauchy(0, 5),
-                                                               prior_intercept = rstanarm::cauchy(0, 5),
-                                                               # MIGHT just need init_r = 1 for the dummy_all one...?
-                                                               # and then rel_room needs iter = 3000
-                                                               iter = 3000)))
+models %<>%
+  mutate(init_r. = 1, # init_r. = if_else(name %in% c("full", "dummy_all"), 1, 2),
+         iter. = if_else(startsWith(name, "sep"), 3000L, 2000L),
+         model = pmap(list(txt_formula, data, init_r., iter.), 
+                      function(a, b, c, d) {
+                        rstanarm::stan_glmer(as.formula(a),
+                                             family = binomial(link = "logit"),
+                                             data = b,
+                                             prior = rstanarm::cauchy(0, 5),
+                                             prior_intercept = rstanarm::cauchy(0, 5),
+                                             init_r = c,
+                                             # MIGHT just need init_r = 1 for the dummy_all one...?
+                                             # and then rel_room needs iter = 3000
+                                             iter = d)
+                      }))
+
+models %<>%
+  mutate(model_rt = pmap(list(txt_formula_rt, data, init_r., iter.), 
+                      function(a, b, c, d) {
+                        rstanarm::stan_glmer(as.formula(a),
+                                             family = gaussian,
+                                             data = b,
+                                             prior = rstanarm::normal(0, 2.5),
+                                             prior_intercept = rstanarm::normal(0, 10),
+                                             init_r = c,
+                                             # MIGHT just need init_r = 1 for the dummy_all one...?
+                                             # and then rel_room needs iter = 3000
+                                             iter = d)
+                      }))
 
 
 save(models, file = "ignore/data_R/models_rstanarm.rda")
@@ -1010,6 +1046,51 @@ preplots_raw_fixef <- preplots_fixef %>%
 
 save(preplots_params, preplots_bysubj, preplots_fixef, preplots_raw_bysubj, preplots_raw_fixef, file = "ignore/data_R/preplots_rstanarm.rda")
 ```
+
+```{r, eval = FALSE}
+preplots_rt_params <- models %>%
+  select(name, iterations = model_rt) %>%
+  mutate(iterations = map(iterations, ~posterior_preplot_params(.x)))
+
+preplots_rt_fixef <- models %>%
+  select(name, terms_rt, data, model_rt) %>%
+  rename(terms = terms_rt, model = model_rt) %>%
+  mutate(data = map2(data, terms, ~.x %>% select(.y) %>% distinct()),
+         predicted = map2(model, data, ~posterior_preplot_fixef(.x, .y, pred_col = "log_rt_pred")),
+         predicted = map_if(predicted, !startsWith(name, "dummy"),
+                            ~.x %>%
+                              mutate_at(vars(one_of("exptCond")), ~recode(.x, `-0.5` = "control", `0.5` = "relational")) %>%
+                              mutate_at(vars(one_of("probe")), ~recode(.x, `-0.5` = "art", `0.5` = "room")) %>%
+                              mutate(resp = recode(resp, `0` = "no_match", `1` = "match"),
+                                     corResp = recode(corResp, `-0.5` = "no_match", `0.5` = "match"),
+                                     on_smoking = recode(on_smoking, `-0.5` = "off", `0.5` = "on")),
+                            .else = ~.x %>%
+                              separate(trial_type,
+                                       into = c("on_smoking", "exptCond", "probe")) %>%
+                              mutate(resp = recode(resp, `0` = "no_match", `1` = "match"),
+                                     corResp = recode(corResp, `-0.5` = "fa", `0.5` = "hit"),
+                                     exptCond = recode(exptCond,
+                                                       ctrl = "control",
+                                                       rel = "relational")))) %>%
+  select(name, predicted) %>%
+  unnest(predicted) %>%
+  mutate(deleteme = str_split(name, "_"),
+         exptCond2 = map_chr(deleteme, ~if_else(length(.x) == 3, .x[2], .x[1])),
+         exptCond2 = recode(exptCond2, rel = "relational", ctrl = "control"),
+         probe2 = map_chr(deleteme, ~.x[length(.x)]),
+         exptCond = coalesce(exptCond, exptCond2),
+         probe = coalesce(probe, probe2),
+         valid = coalesce(valid, 1L),
+         acc = case_when(resp == "match" & corResp == "match" ~ "hit",
+                         resp == "no_match" & corResp == "match" ~ "miss",
+                         resp == "match" & corResp == "no_match" ~ "fa",
+                         resp == "no_match" & corResp == "no_match" ~ "cr",
+                         TRUE ~ NA_character_)) %>%
+  select(-c(deleteme, exptCond2, probe2))
+
+# save(preplots_params, preplots_bysubj, preplots_fixef, preplots_raw_bysubj, preplots_raw_fixef, file = "ignore/data_R/preplots_rstanarm.rda")
+```
+
 
 ```{r}
 load("ignore/data_R/preplots_rstanarm.rda")
@@ -1309,6 +1390,19 @@ preplots_raw_fixef %>%
   geom_density(position = "identity", alpha = 0.5) +
   geom_vline(xintercept = 0, linetype = 3) +
   facet_grid(name ~ metric_type, scales = "free_x")
+```
+
+### rt analyses
+
+```{r}
+preplots_rt_fixef %>%
+  filter(name == "full") %>%
+  nest(data = -iteration) %>%
+  sample_n(300) %>%
+  unnest(data) %>%
+  ggplot(aes(x = on_smoking, y = exp(log_rt_pred), fill = acc)) +
+  geom_violin(position = "identity", alpha = 0.2, draw_quantiles = c(.025, .975)) +
+  facet_grid(~ exptCond + probe)
 ```
 
 ## a simulation analysis?
